<resources>
    <string name="app_name" translatable="false">Unicar</string>
    <string name="email">e-Mail</string>
    <string name="password">Password</string>

    <!--per activity_main-->
    <string name="err_richiesto">Dato Richiesto</string>
    <string name="emptyField">Campi vuoti</string>
    <string name="passAlert">Password minimo 6 caratteri</string>
    <string name="errorSignup">Errore nella registrazione</string>
    <string name="register">Registrati</string> <!--usato anche in register_layout.xml -->
    <string name="login">Accedi</string>

    <!--per i fragment di registrazione-->
    <string name="registerTitle">Iscriviti ora!</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="licence">Patente (facoltativa)</string>
    <string name="emptyField2">Richiesto</string>
    <string name="telephone">Telefono</string>
    <string name="licenceAlert">Patente almeno 6 caratteri</string>
    <string name="register1">Dati personali</string>
    <string name="register2">Dati Account</string>

    <!--per ChooseActivity -->
    <string name="choose">Scegli l\'attività</string>
    <string name="drive">Guida</string>
    <string name="hitch">Trova Passaggi</string>
    <string name="dbWriteErr">Errore di scrittura nel database</string>
    <string name="profile">Modifica Profilo</string>
    <string name="myrides">I Miei Viaggi</string>
    <!--per il dialog-->
    <string name="choose2">Cosa vuoi fare?</string>
    <string name="inserisci">Aggiungi nuovo viaggio </string>
    <string name="new_password">Nuova Password</string>
    <string name="deleted">Viaggi eliminati correttamente!</string>
    <string name="sure">Sei sicuro?</string>
    <string name="sure_detail">Stai per eliminare tutti i tuoi viaggi</string>
    <string name="back">Annulla</string>
    <string name="delete_all">Elimina tutti i viaggi</string>

    <!--per LicenceActivity-->
    <string name="noLicence">Non hai inserito una patente</string>
    <string name="message">Fornisci un codice per iniziare a guidare</string>
    <string name="licence2">Patente N°</string>


    <!--per InsertRide-->
    <string name="seleziona">Dove vai?</string>
    <string name="andata">Andata</string>
    <string name="ritorno">Ritorno</string>
    <string name="scegliOra">Quando parti?</string>
    <string name="posti">Posti disponibili:</string>
    <string name="info">Dettagli Viaggio</string>
    <string name="ora">Ora</string>
    <string name="data">Data</string>
    <string-array name="spinner_posti">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="spinner_tratte">
        <item>Piazza Cavour - UNIVPM</item>
        <item>Piazza Ugo Bassi - UNIVPM</item>
        <item>Stazione Centrale - Tavernelle</item>
        <item>Passetto - Tavernelle</item>
    </string-array>
    <string name="added">Viaggio pubblicato correttamente</string>

    <!--per showRides-->
    <string name="call">Contatta</string>
    <string name="ridesTitle">Scegli il tuo passaggio!</string>
    <string name="direction">Direzione:</string>
    <string name="seats">Posti:</string>
    <string name="message2">Tap per contattare il guidatore</string>

    <!--per my_rides-->
    <string name="viaggi">I tuoi viaggi</string>
    <string name="delete">Vuoi eliminare questo viaggio?</string>
    <string name="elimina">Elimina </string>
    <string name="message3">Tap su un viaggio per eliminarlo </string>

    <!--per profile -->
    <string name="edit">Aggiorna Profilo</string>
    <string name="confirm">Conferma Password</string>
    <string name="update">Aggiorna</string>
    <string name="updated">Profilo aggiornato correttamente</string>
    <string name="save">Confermi i dati?</string>
</resources>
